# practicenotes

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  HANDOFF.md  PLAN.md  README.md  conftest.py  fly.toml  pyproject.toml
.github/workflows/: ci.yml
accounts/: adapter.py  signals.py  test_signup.py  validators.py
assets/css/: source.css
assets/js/: app.js
config/: api.py  settings.py  urls.py
scripts/: start.sh
setlists/: admin.py  api.py  apps.py  forms.py  models.py  services.py  test_sets.py  views.py
setlists/migrations/: 0001_initial.py
songs/: admin.py  api.py  chordpro.py  forms.py  models.py  services.py  test_chordpro.py  test_sharing.py  test_songs.py  test_uploads.py  uploads.py  views.py
songs/migrations/: 0001_initial.py
songs/templatetags/: songs_tags.py
styles/: source.css
templates/: _share.html  base.html  home.html
templates/allauth/elements/: alert.html  button.html  button_group.html  field.html  fields.html  form.html  h1.html  h2.html  hr.html  p.html  panel.html
templates/setlists/: set_detail.html  set_form.html
templates/songs/: _item.html  item_form.html  song_detail.html  song_form.html
templates/workspaces/: band_form.html  band_manage.html  dashboard.html  join.html  owner.html
tests/: test_api.py  test_e2e.py  test_smoke.py
workspaces/: admin.py  api.py  context_processors.py  forms.py  models.py  reserved.py  services.py  slugs.py  test_bands.py  test_owner.py  validators.py  views.py
workspaces/migrations/: 0001_initial.py  0002_band_bandinvite_membership_and_more.py
(+3 files in other folders)
